Refactor HTML structure and update content

--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -1,104 +1,214 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lifeandhobbies - Hanlin Zhao</title>
-    <link rel="stylesheet" href="style-life-hobbies.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Life & Hobbies - Hanlin Zhao</title>
+  <link rel="stylesheet" href="style-life.css" />
 </head>
+
 <body>
+  <!-- ===== Header ===== -->
+  <header class="site-header">
+    <div class="brand">
+      <img src="logo.png" alt="Logo" class="brand-logo" />
+    </div>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">HELLO</a></li>
-                <li><a href="about.html">PROFILE</a></li>
-                <li><a href="program.html">PROGRAMS</a></li>
-                <li><a href="life-hobbies.html">LIFE & HOBBIES</a></li>
-                
-            </ul>
-        </nav>
-    </header>
+    <nav class="site-nav">
+      <ul>
+        <li><a href="index.html">HELLO</a></li>
+        <li><a href="about.html">PROFILE</a></li>
+        <li><a href="program.html">PROGRAMS</a></li>
+        <li><a class="active" href="life-hobbies.html">LIFE &amp; HOBBIES</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- 全屏背景 -->
+  <main>
+    <!-- ===== Hero ===== -->
     <section class="hero">
-        <h1>Live Simply, Breathe Deeply.</h1>
+      <div class="hero-inner">
+        <h1>LIFE &amp; HOBBIES</h1>
+        <p>Live Simply, Breathe Deeply.</p>
+      </div>
     </section>
 
-    <main>
-        <h2 class="section-title">Hobbies</h2>
+    <!-- ===== Content ===== -->
+    <section class="container">
+      <h2 class="section-title">Hobbies</h2>
 
-        <div class="hobby-timeline">
-
-            <div class="hobby-item">
-                <img src="A2.png" alt="Hiking">
-                <div class="hobby-content">
-                    <h3>🏔 Hiking & Exploring</h3>
-                    <p>Mountains stand, waters run.</p>
-                    <p>In 2024 I climbed Abuji Tso in Yunnan, China, at an altitude of 4,400 metres. This was my second high altitude trek. In the future, I will continue to challenge myself and my next goal is Haba Snow Mountain at 5300 metres.</p>
-                </div>
-            </div>
-
-            <div class="hobby-item">
-                <img src="R.png" alt="Road Trip">
-                <div class="hobby-content">
-                    <h3>🌍 Road Trip 🚗</h3>
-                    <p>Wander where the wind blows.</p>
-                    <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
-                    <p>2025 end. This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. Driving the Tang Poetry Road from Hangzhou to Wenzhou, I found myself inside Li Bai’s line—“天姥连天向天横，势拔五岳掩赤城.” Some landscapes are not meant to be seen, but to be understood.</p>
-                    <p>2026 is in progress...</p>
-                </div>
-            </div>
-
-            <div class="hobby-item">
-                <img src="M.png" alt="Musician">
-                <div class="hobby-content">
-                    <h3>🎸 Writing Music</h3>
-                    <p>Life’s a song, sing it loud.</p>
-                    <p>I'm the guitarist in the band and I've written a lot of songs. But I'm very busy right now and I'm writing very slowly. I can sing for you to listen.</p>
-                </div>
-            </div>
-
-            <div class="hobby-item">
-                <img src="wirte.png" alt="Poem">
-                <div class="hobby-content">
-                    <h3>✏️ Writing Poem </h3>
-                    <p>Writing to save myself.</p>
-                    <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
-                    <p>This year（2025), I wrote a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
-                        <p>初为混沌一抔尘，</p>
-                        <p>千劫沧流洗旧痕。</p>
-                        <p>黄沙裂岸穿波涘，</p>
-                        <p>风刀雨刻铸乾坤。</p>
-                </div>
-            </div>
-
-            <div class="hobby-item">
-                <img src="shoot.png" alt="Air Rifle Shooting">
-                <div class="hobby-content">
-                    <h3>🔫 Sports 🎾 </h3>
-                    <p>Dream big, start small.</p>
-                    <p>On weekends, I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends).</p>
-                    <p>My tennis level has improved this year in the beginning of 2026, and I’m now playing at a 3.0–3.5 level.</p>
-                </div>
-            </div>
-
-            <div class="hobby-item">
-                <img src="offroad.png" alt="off-road">
-                <div class="hobby-content">
-                    <h3>🚙 Off-Road</h3>
-                    <p>Grip and go.</p>
-                    <p>Normally, I go up to the mountains for off-roading, and the place I go to most often is Stave Lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
-                    <p>2026, this year, I sold my off-road vehicle because I graduated and need to go back to China. I am sad.
-                </div>
-            </div>
-
+      <!-- ===== Card 1: Hiking ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="A2.png" alt="Hiking" class="hobby-img" />
         </div>
-    </main>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">🏔 Hiking &amp; Exploring</h3>
+            <span class="badge">Hiking</span>
+          </div>
 
-    <footer>
-        <p>© 2025 Hanlin Zhao. All rights reserved.</p>
-    </footer>
+          <p class="tagline">Mountains stand, waters run.</p>
 
+          <div class="prose">
+            <p>In 2024 I climbed Abuji Tso in Yunnan, China, at an altitude of 4,400 metres. This was my second high altitude trek. In the future, I will continue to challenge myself and my next goal is Haba Snow Mountain at 5300 metres.</p>
+          </div>
+
+          <div class="chips">
+            <span class="chip">4,400m</span>
+            <span class="chip">High altitude trek</span>
+            <span class="chip">Next: 5300m</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- ===== Card 2: Road Trip ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="R.png" alt="Road Trip" class="hobby-img" />
+        </div>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">🌍 Road Trip 🚗</h3>
+            <span class="badge">Travel</span>
+          </div>
+
+          <p class="tagline">Wander where the wind blows.</p>
+
+          <!-- We keep ALL text exactly as you wrote, only split into readable blocks -->
+          <div class="prose">
+            <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
+
+            <p>2025 end. This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. Driving the Tang Poetry Road from Hangzhou to Wenzhou, I found myself inside Li Bai’s line—“天姥连天向天横，势拔五岳掩赤城.” Some landscapes are not meant to be seen, but to be understood.</p>
+
+            <p>2026 is in progress...</p>
+          </div>
+
+          <div class="chips">
+            <span class="chip">15,000 km</span>
+            <span class="chip">West Coast</span>
+            <span class="chip">9 national parks</span>
+            <span class="chip">Tang Poetry Road</span>
+            <span class="chip">2026 in progress</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- ===== Card 3: Music ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="M.png" alt="Musician" class="hobby-img" />
+        </div>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">🎸 Writing Music</h3>
+            <span class="badge">Music</span>
+          </div>
+
+          <p class="tagline">Life’s a song, sing it loud.</p>
+
+          <div class="prose">
+            <p>I'm the guitarist in the band and I've written a lot of songs. But I'm very busy right now and I'm writing very slowly. I can sing for you to listen.</p>
+          </div>
+
+          <div class="chips">
+            <span class="chip">Guitar</span>
+            <span class="chip">Songwriting</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- ===== Card 4: Poem ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="wirte.png" alt="Poem" class="hobby-img" />
+        </div>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">✏️ Writing Poem</h3>
+            <span class="badge">Poetry</span>
+          </div>
+
+          <p class="tagline">Writing to save myself.</p>
+
+          <div class="prose">
+            <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
+
+            <p>This year（2025), I wrote a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
+
+            <div class="poem">
+              <p>初为混沌一抔尘，</p>
+              <p>千劫沧流洗旧痕。</p>
+              <p>黄沙裂岸穿波涘，</p>
+              <p>风刀雨刻铸乾坤。</p>
+            </div>
+          </div>
+
+          <div class="chips">
+            <span class="chip">Five-character quatrains</span>
+            <span class="chip">Bai Juyi</span>
+            <span class="chip">Shengtang poets</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- ===== Card 5: Sports ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="shoot.png" alt="Air Rifle Shooting" class="hobby-img" />
+        </div>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">🔫 Sports 🎾</h3>
+            <span class="badge">Sports</span>
+          </div>
+
+          <p class="tagline">Dream big, start small.</p>
+
+          <div class="prose">
+            <p>On weekends, I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends).</p>
+            <p>My tennis level has improved this year in the beginning of 2026, and I’m now playing at a 3.0–3.5 level.</p>
+          </div>
+
+          <div class="chips">
+            <span class="chip">10m air rifle</span>
+            <span class="chip">Recurve bow</span>
+            <span class="chip">Tennis 3.0–3.5</span>
+          </div>
+        </div>
+      </article>
+
+      <!-- ===== Card 6: Off-Road ===== -->
+      <article class="hobby-card">
+        <div class="hobby-media">
+          <img src="offroad.png" alt="off-road" class="hobby-img" />
+        </div>
+        <div class="hobby-body">
+          <div class="hobby-top">
+            <h3 class="hobby-title">🚙 Off-Road</h3>
+            <span class="badge">Outdoors</span>
+          </div>
+
+          <p class="tagline">Grip and go.</p>
+
+          <div class="prose">
+            <p>Normally, I go up to the mountains for off-roading, and the place I go to most often is Stave Lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
+            <p>2026, this year, I sold my off-road vehicle because I graduated and need to go back to China. I am sad.</p>
+          </div>
+
+          <div class="chips">
+            <span class="chip">Stave Lake</span>
+            <span class="chip">Vancouver</span>
+            <span class="chip">Off-roading</span>
+          </div>
+        </div>
+      </article>
+
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <p>© 2025 Hanlin Zhao. All rights reserved.</p>
+  </footer>
 </body>
 </html>
