Add lazy loading to hobby images
Updated image elements to use lazy loading for better performance.

--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -11,10 +11,12 @@
   <!-- ===== Header ===== -->
   <header class="site-header">
     <div class="brand">
-      <img src="logo.png" alt="Logo" class="brand-logo" />
+      <a href="index.html" class="brand-link" aria-label="Go to homepage">
+        <img src="logo.png" alt="Logo" class="brand-logo" />
+      </a>
     </div>
 
-    <nav class="site-nav">
+    <nav class="site-nav" aria-label="Primary">
       <ul>
         <li><a href="index.html">HELLO</a></li>
         <li><a href="about.html">PROFILE</a></li>
@@ -40,7 +42,7 @@
       <!-- ===== Card 1: Hiking ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="A2.png" alt="Hiking" class="hobby-img" />
+          <img src="A2.png" alt="Hiking" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -65,7 +67,7 @@
       <!-- ===== Card 2: Road Trip ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="R.png" alt="Road Trip" class="hobby-img" />
+          <img src="R.png" alt="Road Trip" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -75,7 +77,6 @@
 
           <p class="tagline">Wander where the wind blows.</p>
 
-          <!-- We keep ALL text exactly as you wrote, only split into readable blocks -->
           <div class="prose">
             <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
 
@@ -97,7 +98,7 @@
       <!-- ===== Card 3: Music ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="M.png" alt="Musician" class="hobby-img" />
+          <img src="M.png" alt="Musician" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -121,7 +122,7 @@
       <!-- ===== Card 4: Poem ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="wirte.png" alt="Poem" class="hobby-img" />
+          <img src="wirte.png" alt="Poem" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -155,7 +156,7 @@
       <!-- ===== Card 5: Sports ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="shoot.png" alt="Air Rifle Shooting" class="hobby-img" />
+          <img src="shoot.png" alt="Air Rifle Shooting" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -181,7 +182,7 @@
       <!-- ===== Card 6: Off-Road ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="offroad.png" alt="off-road" class="hobby-img" />
+          <img src="offroad.png" alt="off-road" class="hobby-img" loading="lazy" />
         </div>
         <div class="hobby-body">
           <div class="hobby-top">
@@ -203,7 +204,6 @@
           </div>
         </div>
       </article>
-
     </section>
   </main>
 
