Update stylesheet link in life-hobbies.html

--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Life & Hobbies - Hanlin Zhao</title>
-  <link rel="stylesheet" href="style-life.css" />
+
+  <!-- ✅ 关键：你的 CSS 文件名是 style-life-hobbies.css -->
+  <link rel="stylesheet" href="style-life-hobbies.css" />
 </head>
 
 <body>
