Refactor HTML structure and comments
Updated HTML structure and improved comments for clarity.

--- a/life-hobbies.html
+++ b/life-hobbies.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Life & Hobbies - Hanlin Zhao</title>
-
-  <!-- ✅ 关键：你的 CSS 文件名是 style-life-hobbies.css -->
   <link rel="stylesheet" href="style-life-hobbies.css" />
 </head>
 
 <body>
-  <!-- ===== Header ===== -->
+  <!-- ==============================
+       Header / Nav
+  =============================== -->
   <header class="site-header">
     <div class="brand">
       <a href="index.html" class="brand-link" aria-label="Go to homepage">
@@ -29,7 +29,9 @@
   </header>
 
   <main>
-    <!-- ===== Hero ===== -->
+    <!-- ==============================
+         Hero
+    =============================== -->
     <section class="hero">
       <div class="hero-inner">
         <h1>LIFE &amp; HOBBIES</h1>
@@ -37,15 +39,23 @@
       </div>
     </section>
 
-    <!-- ===== Content ===== -->
+    <!-- ==============================
+         Content
+    =============================== -->
     <section class="container">
       <h2 class="section-title">Hobbies</h2>
 
-      <!-- ===== Card 1: Hiking ===== -->
+      <!-- ===== Hiking ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="A2.png" alt="Hiking" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="A2.png"
+            alt="Hiking"
+            data-gallery="hiking"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">🏔 Hiking &amp; Exploring</h3>
@@ -55,7 +65,11 @@
           <p class="tagline">Mountains stand, waters run.</p>
 
           <div class="prose">
-            <p>In 2024 I climbed Abuji Tso in Yunnan, China, at an altitude of 4,400 metres. This was my second high altitude trek. In the future, I will continue to challenge myself and my next goal is Haba Snow Mountain at 5300 metres.</p>
+            <p>
+              In 2024 I climbed Abuji Tso in Yunnan, China, at an altitude of 4,400 metres.
+              This was my second high altitude trek. In the future, I will continue to
+              challenge myself and my next goal is Haba Snow Mountain at 5300 metres.
+            </p>
           </div>
 
           <div class="chips">
@@ -66,11 +80,17 @@
         </div>
       </article>
 
-      <!-- ===== Card 2: Road Trip ===== -->
+      <!-- ===== Road Trip ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="R.png" alt="Road Trip" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="R.png"
+            alt="Road Trip"
+            data-gallery="roadtrip"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">🌍 Road Trip 🚗</h3>
@@ -80,9 +100,22 @@
           <p class="tagline">Wander where the wind blows.</p>
 
           <div class="prose">
-            <p>In 2024, my total road trip mileage was about 15,000 kilometres. I travelled the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver). In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan to drive the middle of the USA.</p>
+            <p>
+              In 2024, my total road trip mileage was about 15,000 kilometres. I travelled
+              the west coast of the US (Vancouver-San Francisco-Los Angeles-San Diego-Las Vegas-Vancouver).
+              In addition, I drove about 4,000 kilometres in Yunnan, China in order to taste different
+              Pu'er teas. I have some other short trips (within 1000km). in 2025, my goal is to drive
+              to Tuktoyaktuk in the north of Canada, in the middle of the Arctic Circle. I also plan
+              to drive the middle of the USA.
+            </p>
 
-            <p>2025 end. This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year. My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year. Driving the Tang Poetry Road from Hangzhou to Wenzhou, I found myself inside Li Bai’s line—“天姥连天向天横，势拔五岳掩赤城.” Some landscapes are not meant to be seen, but to be understood.</p>
+            <p>
+              2025 end. This year I changed my plan but Tuktoyaktuk is still my dream. It is such a busy year.
+              My graduate program is too busy! In my I went back to west of US from San Francisco to Las Vegas then
+              turn north to Yellowstone National Park. I visited 9 national parks and Salt Lake City. In the next half year.
+              Driving the Tang Poetry Road from Hangzhou to Wenzhou, I found myself inside Li Bai’s line—
+              “天姥连天向天横，势拔五岳掩赤城.” Some landscapes are not meant to be seen, but to be understood.
+            </p>
 
             <p>2026 is in progress...</p>
           </div>
@@ -97,11 +130,17 @@
         </div>
       </article>
 
-      <!-- ===== Card 3: Music ===== -->
+      <!-- ===== Music ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="M.png" alt="Musician" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="M.png"
+            alt="Writing Music"
+            data-gallery="music"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">🎸 Writing Music</h3>
@@ -111,7 +150,10 @@
           <p class="tagline">Life’s a song, sing it loud.</p>
 
           <div class="prose">
-            <p>I'm the guitarist in the band and I've written a lot of songs. But I'm very busy right now and I'm writing very slowly. I can sing for you to listen.</p>
+            <p>
+              I'm the guitarist in the band and I've written a lot of songs. But I'm very busy right now
+              and I'm writing very slowly. I can sing for you to listen.
+            </p>
           </div>
 
           <div class="chips">
@@ -121,11 +163,17 @@
         </div>
       </article>
 
-      <!-- ===== Card 4: Poem ===== -->
+      <!-- ===== Poem ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="wirte.png" alt="Poem" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="wirte.png"
+            alt="Writing Poem"
+            data-gallery="poem"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">✏️ Writing Poem</h3>
@@ -135,9 +183,15 @@
           <p class="tagline">Writing to save myself.</p>
 
           <div class="prose">
-            <p>I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS. my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.</p>
+            <p>
+              I have written more than a dozen poems, and I am best at writing FIVE CHARACTER QUATRAINS.
+              my favourite poet is Bai Juyi, and you can talk to me about writing poems, or Shengtang poets.
+            </p>
 
-            <p>This year（2025), I wrote a Chinese Poem when I went to 24 road Utah, US to describe the “space needle” view I saw. I hope you like it.</p>
+            <p>
+              This year（2025), I wrote a Chinese Poem when I went to 24 road Utah, US to describe the “space needle”
+              view I saw. I hope you like it.
+            </p>
 
             <div class="poem">
               <p>初为混沌一抔尘，</p>
@@ -155,11 +209,17 @@
         </div>
       </article>
 
-      <!-- ===== Card 5: Sports ===== -->
+      <!-- ===== Sports ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="shoot.png" alt="Air Rifle Shooting" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="shoot.png"
+            alt="Sports"
+            data-gallery="sports"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">🔫 Sports 🎾</h3>
@@ -169,8 +229,13 @@
           <p class="tagline">Dream big, start small.</p>
 
           <div class="prose">
-            <p>On weekends, I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports (or at least the best among my friends).</p>
-            <p>My tennis level has improved this year in the beginning of 2026, and I’m now playing at a 3.0–3.5 level.</p>
+            <p>
+              On weekends, I practice 10m air rifle and competitive recurve bow, and I'm very good at shooting sports
+              (or at least the best among my friends).
+            </p>
+            <p>
+              My tennis level has improved this year in the beginning of 2026, and I’m now playing at a 3.0–3.5 level.
+            </p>
           </div>
 
           <div class="chips">
@@ -181,11 +246,17 @@
         </div>
       </article>
 
-      <!-- ===== Card 6: Off-Road ===== -->
+      <!-- ===== Off-Road ===== -->
       <article class="hobby-card">
         <div class="hobby-media">
-          <img src="offroad.png" alt="off-road" class="hobby-img" loading="lazy" />
+          <img
+            class="hobby-img"
+            src="offroad.png"
+            alt="Off-Road"
+            data-gallery="offroad"
+          />
         </div>
+
         <div class="hobby-body">
           <div class="hobby-top">
             <h3 class="hobby-title">🚙 Off-Road</h3>
@@ -195,8 +266,15 @@
           <p class="tagline">Grip and go.</p>
 
           <div class="prose">
-            <p>Normally, I go up to the mountains for off-roading, and the place I go to most often is Stave Lake on the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring or winter.</p>
-            <p>2026, this year, I sold my off-road vehicle because I graduated and need to go back to China. I am sad.</p>
+            <p>
+              Normally, I go up to the mountains for off-roading, and the place I go to most often is Stave Lake on
+              the east side of Vancouver, which is one of the most popular off-roading spots in Vancouver in the spring
+              or winter.
+            </p>
+
+            <p>
+              2026, this year, I sold my off-road vehicle because I graduated and need to go back to China. I am sad.
+            </p>
           </div>
 
           <div class="chips">
@@ -206,11 +284,45 @@
           </div>
         </div>
       </article>
+
     </section>
+
+    <!-- ==============================
+         Footer
+    =============================== -->
+    <footer class="site-footer">
+      <p>© 2025 Hanlin Zhao. All rights reserved.</p>
+    </footer>
   </main>
 
-  <footer class="site-footer">
-    <p>© 2025 Hanlin Zhao. All rights reserved.</p>
-  </footer>
+  <!-- ===== Gallery Modal (one-time) ===== -->
+  <div class="gallery-modal" id="galleryModal" aria-hidden="true">
+    <div class="gallery-backdrop" data-close="true"></div>
+
+    <div class="gallery-panel" role="dialog" aria-modal="true" aria-label="Photo gallery">
+      <button class="gallery-close" type="button" aria-label="Close" data-close="true">×</button>
+
+      <div class="gallery-head">
+        <div class="gallery-title" id="galleryTitle">Gallery</div>
+        <div class="gallery-sub" id="gallerySub">Click a photo to view larger.</div>
+      </div>
+
+      <div class="gallery-grid" id="galleryGrid"></div>
+
+      <div class="gallery-viewer" id="galleryViewer" aria-hidden="true">
+        <button class="viewer-btn prev" type="button" aria-label="Previous">‹</button>
+
+        <figure class="viewer-figure">
+          <img id="viewerImg" alt="" />
+          <figcaption id="viewerCap"></figcaption>
+        </figure>
+
+        <button class="viewer-btn next" type="button" aria-label="Next">›</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- ===== JS ===== -->
+  <script src="life-hobbies.js"></script>
 </body>
 </html>
