--- a/about.html
+++ b/about.html
@@ -119,12 +119,10 @@
 
           <div class="card-body">
             <p>
-              I am a data analyst with a strong foundation in financial analysis, management accounting,
-              and data-driven decision-making. Backed by formal training in accounting and finance, I am
-              experienced in applying analytics to cost structure analysis, budgeting, forecasting, and
-              performance evaluation. I work extensively with Python, SQL, Tableau, Power BI, and AWS to
-              transform complex financial and operational data into clear, actionable insights for
-              management and strategic planning.
+              I am a data analyst with a strong foundation in financial analysis, management accounting, and data-driven decision-making. 
+              Backed by formal training in accounting and finance, I am experienced in applying analytics to cost structure analysis, budgeting, forecasting, and performance evaluation. 
+              My work goes beyond descriptive analysis, with a focus on supporting strategic decision-making through scenario analysis, trade-off evaluation, and insight-driven recommendations. 
+              I work extensively with Python, SQL, Tableau, Power BI, and AWS to transform complex financial and operational data into clear, actionable insights that guide management decisions and long-term strategy.
             </p>
 
             <p>
